# pulse-temporal

./: .gitignore  EXPANDING_PULSE.md  HANDOFF.md  LICENSE  README.md  TASKS.md  WHAT_WE_DID.md  project.md  pyproject.toml  train.sh
examples/: basic_encoding.py  daemon_setup.py  gradio_demo.py  inference_trained.py  training_space_app.py
models/pulse-base-v1/: README.md  config.json
models/pulse-qwen-1.5b-card/: README.md
notebooks/: train_gemma3_colab.ipynb  train_gemma4_colab.ipynb  train_on_colab.ipynb
pulse_temporal/: __init__.py  encoder.py  mcp_server.py  middleware.py
pulse_temporal/adapters/: __init__.py  git_adapter.py  ical_adapter.py
pulse_temporal/daemon/: __init__.py  pulse_daemon.py  state_db.py
pulse_temporal/layers/: __init__.py  calendar.py  circadian.py  log_time.py  oscillators.py  prediction_error.py  temporal_state.py  urgency.py
pulse_temporal/training/: __init__.py  data_generator.py  temporal_tuner.py
pulse_temporal/utils/: __init__.py  similarity.py
tests/: test_adapters.py  test_daemon.py  test_encoder.py  test_layers.py  test_mcp_server.py  test_middleware.py
